# xingest

./: .gitignore  CONTRIBUTING.md  Dockerfile  PLAN.md  README.md  TASKS.md  docker-compose.yml  pyproject.toml
docs/: ARCHITECTURE.md
scripts/: validate_scrape.py
tests/: __init__.py  test_cache.py  test_config.py  test_dataframe.py  test_exporter.py  test_integration_scrape.py  test_orchestrator.py  test_parser.py  test_proxy.py
tests/fixtures/: cz_binance.html  cz_binance.json  jason.html  jason.json  nikitabier.html  nikitabier.json  nodepay.html  nodepay.json  okx.html  okx.json
xingest/: __init__.py  api.py  cli.py  config.py  exceptions.py
xingest/cache/: __init__.py  base.py  redis_cache.py  sqlite_cache.py
xingest/core/: __init__.py  exporter.py  fetcher.py  orchestrator.py  parser.py  transformer.py
xingest/logging/: __init__.py  setup.py
xingest/models/: __init__.py  profile.py  result.py  tweet.py
xingest/proxy/: __init__.py  rotating.py
