[project]
name = "xingest"
version = "0.1.0"
description = "X/Twitter profile and tweet scraper"
requires-python = ">=3.12"
dependencies = [
    "playwright>=1.40.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "httpx>=0.25.0",
    "aiosqlite>=0.19.0",
    "redis>=5.0.0",
    "structlog>=23.2.0",
    "typer[all]>=0.9.0",
    "tenacity>=8.2.0",
]

[project.optional-dependencies]
pandas = [
    "pandas>=2.0.0",
]
api = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.25.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[project.scripts]
xingest = "xingest.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: marks tests as integration tests (require internet, run sparingly)",
]
